--- a/projects.html
+++ b/projects.html
@@ -26,14 +26,16 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">9 - Creation of an auction website</button>
+            <button class="accordion">9) Intemporal - Creation of an auction website</button>
             <div class="panel">
                 <br>
                 <h3>Project Intemporal, 2023</h3>
                 <br>
-                <p>I had the opportunity to develop during the year 2023 an auction site of watches named Intemporal within a team of 6 persons. This project was realized at the University Institute of Technology in Computer Sciences of Grenoble. I was in charge of the layout as well as the HTML, CSS and JavaScript realization of our site.
+                <p>I had the opportunity to develop during the year 2023 an auction site of watches named Intemporal within a team of 6 persons. This project was realized at the University Institute of Technology in Computer Sciences of Grenoble. I was in charge of the layout as well as the HTML, CSS and JavaScript realization of our site. So I made the design of the site as well as the design file.
                     I worked on the ergonomic criteria of Bastien and Scapin in order to guarantee a good user experience, for example checking the contrasts with Adobe color.
                     I also had the opportunity to make user tests to people outside our team in order to improve our site, especially with the help of SUS questionnaire which were passed with flying colors.</p>
+                <br>
+                <p>The project design file is available here : <a target="_blank" class="links" href="https://docs.google.com/document/d/1ocvxQ9nPROopoYBKqNfltIVitiJN1vFm_hQEb5EWIsM/edit?usp=sharing">project design file</a></p>
                 <br>
                 <p>Here are some screenshots of what I was able to achieve during this project :</p>
                 <br>
@@ -57,7 +59,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">8 - Creation of a first site about me</button>
+            <button class="accordion">8) Me - Creation of a first site about me</button>
             <div class="panel">
                 <br>
                 <h3>Project Me, 2022</h3>
@@ -69,12 +71,14 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">7 - Development of an event organization application</button>
+            <button class="accordion">7) Hopack - Development of an event organization application</button>
             <div class="panel">
                 <br>
                 <h3>Project Hopack, 2022</h3>
                 <br>
                 <p>During the year 2022, we developed an application in JavaFx and CSS in order to facilitate to the professional of the organization of wedding their job. This project was realized in group of 6 within the University Institute of Technology in Computer Sciences of Grenoble and I had the opportunity to be project manager.</p>
+                <br>
+                <p>The GUI file that we were able to create during this project : <a target="_blank" class="links" href="https://drive.google.com/file/d/1LkmkPcTnK1lLAR7ER5FIZKeplsWgUn7S/view?usp=sharing">GUI file</a></p>
                 <br>
                 <p>Here are some views of our application : </p>
                 <br>
@@ -87,7 +91,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">6 - Development of a service rental website</button>
+            <button class="accordion">6) Op Heberg - Development of a service rental website</button>
             <div class="panel">
                 <br>
                 <h3>Project Op Heberg, 2022</h3>
@@ -104,7 +108,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">5 - Development of a website to rent IT services</button>
+            <button class="accordion">5) Rent a dev - Development of a website to rent IT services</button>
             <div class="panel">
                 <br>
                 <h3>Project Rent a dev, 2022</h3>
@@ -120,7 +124,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">4 - Installing a Debian server</button>
+            <button class="accordion">4) Installing a server - Installing a Debian server</button>
             <div class="panel">
                 <br>
                 <h3>Project Installing a server, 2022</h3>
@@ -132,7 +136,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">3 - Sorting a database</button>
+            <button class="accordion">3) Open Food Facts - Sorting a database</button>
             <div class="panel">
                 <br>
                 <h3>Project Open Food Facts, 2022</h3>
@@ -142,7 +146,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">2 - Development of an AI</button>
+            <button class="accordion">2) Automatic classification - Development of an AI</button>
             <div class="panel">
                 <br>
                 <h3>Project Automatic classification, 2021</h3>
@@ -154,7 +158,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">1 - Development of a website for a digital enterprise</button>
+            <button class="accordion">1) Hardis Group - Development of a website for a digital enterprise</button>
             <div class="panel">
                 <br>
                 <h3>Project Hardis Group, 2021</h3>
