--- a/projets.html
+++ b/projets.html
@@ -26,15 +26,17 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">9 - Création d'un site de vente aux enchères</button>
+            <button class="accordion">9) Intemporal - Création d'un site de vente aux enchères</button>
             <div class="panel">
                 <br>
                 <h3>Projet Intemporal, 2023</h3>
                 <br>
-                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montres nommé Intemporal au sein d'une équipe de 6 personnes. Ce projet a été réalisé à l'IUT 2 de Grenoble. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site.
+                <p>J'ai eu l'occasion de développer au cours de l'année 2023 un site de vente aux enchères de montres nommé Intemporal au sein d'une équipe de 6 personnes. Ce projet a été réalisé à l'IUT 2 de Grenoble. J'ai été en charge du maquettage ainsi que de la réalisation HTML, CSS et JavaScript de notre site. J'ai donc réalisé le design du site ainsi que celui du dossier de conception.
                     J'ai travaillé sur les critères ergonomiques de Bastien et Scapin afin de garantir une bonne expérience utilisateur, par exemple vérifier les contrastes à l'aide d'Adobe color.
                     J'ai également eu l'occasion de faire passer des tests utilisateurs à des personnes extérieures à notre équipe afin de pouvoir améliorer notre site, notamment à l'aide de questionnaires SUS qui ont été passé avec brio.
                 </p>
+                <br>
+                <p>Le dossier de conception du projet est disponible ici : <a target="_blank" class="links" href="https://docs.google.com/document/d/1ocvxQ9nPROopoYBKqNfltIVitiJN1vFm_hQEb5EWIsM/edit?usp=sharing">dossier de conception</a></p>
                 <br>
                 <p>Voici quelques captures d'écrans de ce que j'ai pu réaliser au cours de ce projet :</p>
                 <br>
@@ -58,7 +60,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">8 - Création d'un premier site à propos de moi</button>
+            <button class="accordion">8) Me - Création d'un premier site à propos de moi</button>
             <div class="panel">
                 <br>
                 <h3>Projet Me, 2022</h3>
@@ -72,12 +74,14 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">7 - Développement d'une application d'organisation évènementielle</button>
+            <button class="accordion">7) Hopack - Développement d'une application d'organisation évènementielle</button>
             <div class="panel">
                 <br>
                 <h3>Projet Hopack, 2022</h3>
                 <br>
                 <p>Lors de l'année 2022, nous avons développé une application en JavaFx et CSS afin de faciliter aux professionnels de l'organisation de mariages leur métier. Ce projet a été réalisé en groupe de 6 au sein de l'IUT 2 de Grenoble et j'ai eu l'opportunité d'être chef de projet.</p>
+                <br>
+                <p>Le dossier IHM que nous avons pu réaliser au cours de ce projet : <a target="_blank" class="links" href="https://drive.google.com/file/d/1LkmkPcTnK1lLAR7ER5FIZKeplsWgUn7S/view?usp=sharing">dossier IHM</a></p>
                 <br>
                 <p>Voici quelques vues de notre application : </p>
                 <br>
@@ -90,7 +94,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">6 - Développement d'un site web de location de service</button>
+            <button class="accordion">6) Op Heberg - Développement d'un site web de location de service</button>
             <div class="panel">
                 <br>
                 <h3>Projet Op Heberg, 2022</h3>
@@ -107,7 +111,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">5 - Développement d'un site web permettant de louer des services informatiques</button>
+            <button class="accordion">5) Rent a dev - Développement d'un site web permettant de louer des services informatiques</button>
             <div class="panel">
                 <br>
                 <h3>Projet Rent a dev, 2022</h3>
@@ -123,7 +127,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">4 - Installation d'un serveur Debian</button>
+            <button class="accordion">4) Installation de serveur - Installation d'un serveur Debian</button>
             <div class="panel">
                 <br>
                 <h3>Projet Installation de serveur, 2022</h3>
@@ -135,7 +139,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">3 - Tri d'une base de données</button>
+            <button class="accordion">3) Open Food Facts - Tri d'une base de données</button>
             <div class="panel">
                 <br>
                 <h3>Projet Open Food Facts, 2022</h3>
@@ -145,7 +149,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">2 - Développement d'une IA</button>
+            <button class="accordion">2) Classification automatique - Développement d'une IA</button>
             <div class="panel">
                 <br>
                 <h3>Projet Classification automatique, 2021</h3>
@@ -157,7 +161,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">1 - Développement d'un site internet pour une ESN</button>
+            <button class="accordion">1) Hardis Group - Développement d'un site internet pour une ESN</button>
             <div class="panel">
                 <br>
                 <h3>Projet Hardis Group, 2021</h3>
