--- a/projets.html
+++ b/projets.html
@@ -168,7 +168,7 @@
                 <br>
                 <p>L'IUT informatique de Grenoble nous a proposé comme projet en 2021 de réaliser un site web pour une entreprise du numérique. Ce projet a été réalisé en trinôme, ceci est le premier site internet que j'ai eu l'occasion de réaliser.</p>
                 <br>
-                <p>Voici quelques captures de ce site : </p>
+                <p>Voici une capture de ce site : </p>
                 <br>
                 <div class="image-container">
                     <img src="img/hardis/hardis-1.PNG" alt="">
