--- a/projects.html
+++ b/projects.html
@@ -165,7 +165,7 @@
                 <br>
                 <p>The University Institute of Technology in Computer Sciences of Grenoble proposed us as a project in 2021 to realize a website for a digital company. This project was realized in trinomial, this is the first website that I had the opportunity to realize.</p>
                 <br>
-                <p>Here are some captures of this site : </p>
+                <p>Here is a capture of this site : </p>
                 <br>
                 <div class="image-container">
                     <img src="img/hardis/hardis-1.PNG" alt="">
