--- a/skills.html
+++ b/skills.html
@@ -49,6 +49,7 @@
           <p>VSCode</p>
           <p>Intellij</p>
           <p>CLion</p>
+          <p>Android Studio</p>
           <p>R Studio</p>
           <p>Visual Paradigm</p>
           <p>Linux</p>
