--- a/index-en.html
+++ b/index-en.html
@@ -78,7 +78,43 @@
     </header>
     <div class="hero-container">
         <div class="hero-content">
-            <img src="img/hero-image.svg" alt="">
+            <body data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed=""><audio class="audio-for-speech" src=""></audio><div class="translate-tooltip-mtz green sm-root translate hidden_translate">
+                <div class="header-wrapper">
+                    <div class="header-controls">
+                        <span class="sound-translate"></span>
+                        <span class="copy green"></span>
+                        <span class="settings-translator"></span>
+                    </div>
+                    <div class="header-title">translator</div>
+                    <div class="translate-icons">
+                        <img class="from" src="">
+                        <img class="translate-arrow" src="chrome-extension://ibppednjgooiepmkgdcoppnmbhmieefh/images/right-arrow.png">
+                    </div>
+                </div>
+                <div class="translated-text">
+                    <div id="translator-words" class="words"></div>
+                    <div class="sentences green"></div>
+                </div>
+                <div class="trans_controls">
+                    <div class="trans_controls__control-wrapper double_click">
+                        <span class="trans_controls__toggle dbl-click active" data-store="double_click">
+                            <div class="trans_controls__inner-circle"></div>
+                        </span>
+                        <span class="trans_controls__description">
+                        Double-click
+                        </span>
+                    </div>
+                    <div class="trans_controls__control-wrapper selection">
+                        <span class="trans_controls__toggle icon-trans active" data-store="icon_trans">
+                            <div class="trans_controls__inner-circle"></div>
+                        </span>
+                        <span class="trans_controls__description">
+                        Select to translate
+                        </span>
+                    </div>
+                </div>
+            </div><span class="translate-button-mtz hidden_translate green"></span>
+            <canvas id="canvas3d" data-engine="three.js r149" width="476" height="790" style="width: 100%; height: 100%;"></canvas>
         </div>
         <div class="hero-content">
             <h1>Hi, I'm Ethan</h1>
@@ -91,6 +127,7 @@
             </div>
         </div>
     </div>
+    <script src="js/module.js" type="module"></script>
     <script src="js/transition.js"></script>
   </body>
 </html>
