--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,31 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">9) Intemporal - Creation of an auction website</button>
+            <button class="accordion">11 | NASApi - Creating a site with a NASA API</button>
+            <div class="panel">
+                <br>
+                <h3>Project NASApi, 2023</h3>
+                <br>
+                <p>With the help of a colleague, we created a site using a NASA API to search for images. This site allows you to discover different NASA images by searching for a mission, a photographer or by entering a keyword. The technologies used are JS, HTML and CSS.</p>
+                <br>
+                <p>Website link : <a target="_blank" class="links" href="https://erlow38.github.io/NASApi/">NASApi</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">10 | Road game - Création d'un mini jeu de voiture</button>
+            <div class="panel">
+                <br>
+                <h3>Project Road game, 2023</h3>
+                <br>
+                <p>I decided to create a kind of mini game where you can control a car on a road. You can also change the color of the car, the background and make boxes appear with a button. JS, HTML and CSS were used.</p>
+                <br>
+                <p>Website link : <a target="_blank" class="links" href="https://erlow38.github.io/car/">road game</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">9 | Intemporal - Creation of an auction website</button>
             <div class="panel">
                 <br>
                 <h3>Project Intemporal, 2023</h3>
@@ -59,7 +83,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">8) Me - Creation of a first site about me</button>
+            <button class="accordion">8 | Me - Creation of a first site about me</button>
             <div class="panel">
                 <br>
                 <h3>Project Me, 2022</h3>
@@ -71,7 +95,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">7) Hopack - Development of an event organization application</button>
+            <button class="accordion">7 | Hopack - Development of an event organization application</button>
             <div class="panel">
                 <br>
                 <h3>Project Hopack, 2022</h3>
@@ -91,7 +115,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">6) Op Heberg - Development of a service rental website</button>
+            <button class="accordion">6 | Op Heberg - Development of a service rental website</button>
             <div class="panel">
                 <br>
                 <h3>Project Op Heberg, 2022</h3>
@@ -108,7 +132,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">5) Rent a dev - Development of a website to rent IT services</button>
+            <button class="accordion">5 | Rent a dev - Development of a website to rent IT services</button>
             <div class="panel">
                 <br>
                 <h3>Project Rent a dev, 2022</h3>
@@ -124,7 +148,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">4) Installing a server - Installing a Debian server</button>
+            <button class="accordion">4 | Installing a server - Installing a Debian server</button>
             <div class="panel">
                 <br>
                 <h3>Project Installing a server, 2022</h3>
@@ -136,7 +160,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">3) Open Food Facts - Sorting a database</button>
+            <button class="accordion">3 | Open Food Facts - Sorting a database</button>
             <div class="panel">
                 <br>
                 <h3>Project Open Food Facts, 2022</h3>
@@ -146,7 +170,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">2) Automatic classification - Development of an AI</button>
+            <button class="accordion">2 | Automatic classification - Development of an AI</button>
             <div class="panel">
                 <br>
                 <h3>Project Automatic classification, 2021</h3>
@@ -158,7 +182,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">1) Hardis Group - Development of a website for a digital enterprise</button>
+            <button class="accordion">1 | Hardis Group - Development of a website for a digital enterprise</button>
             <div class="panel">
                 <br>
                 <h3>Project Hardis Group, 2021</h3>
