--- a/projets.html
+++ b/projets.html
@@ -26,7 +26,31 @@
     </header>
     <div class="projects-container">
         <div class="projects-content">
-            <button class="accordion">9) Intemporal - Création d'un site de vente aux enchères</button>
+            <button class="accordion">11 | NASApi - Création d'un site avec une API de la NASA</button>
+            <div class="panel">
+                <br>
+                <h3>Projet NASApi, 2023</h3>
+                <br>
+                <p>A l'aide d'un collègue, nous avons créé un site utilisant une API de la NASA permettant de rechercher des images. Ce site permet de découvir différentes images de la NASA en cherchant une mission, un photographe ou bien en entrant un mot clé. Les technologies utilisées sont JS, HTML et CSS.</p>
+                <br>
+                <p>Lien du site : <a target="_blank" class="links" href="https://erlow38.github.io/NASApi/">NASApi</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">10 | Road game - Création d'un mini jeu de voiture</button>
+            <div class="panel">
+                <br>
+                <h3>Projet Road game, 2023</h3>
+                <br>
+                <p>J'ai décidé de créer une sorte de mini jeu où l'on peu contrôler une voiture sur une route. On peut également changer la couleur de la voiture, du fond et faire apparaitre des caisses à l'aide d'un bouton. Du JS, HTML et CSS ont été utilisés.</p>
+                <br>
+                <p>Lien du site : <a target="_blank" class="links" href="https://erlow38.github.io/car/">road game</a></p>
+                <br>
+            </div>
+        </div>
+        <div class="projects-content">
+            <button class="accordion">9 | Intemporal - Création d'un site de vente aux enchères</button>
             <div class="panel">
                 <br>
                 <h3>Projet Intemporal, 2023</h3>
@@ -60,7 +84,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">8) Me - Création d'un premier site à propos de moi</button>
+            <button class="accordion">8 | Me - Création d'un premier site à propos de moi</button>
             <div class="panel">
                 <br>
                 <h3>Projet Me, 2022</h3>
@@ -74,7 +98,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">7) Hopack - Développement d'une application d'organisation évènementielle</button>
+            <button class="accordion">7 | Hopack - Développement d'une application d'organisation évènementielle</button>
             <div class="panel">
                 <br>
                 <h3>Projet Hopack, 2022</h3>
@@ -94,7 +118,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">6) Op Heberg - Développement d'un site web de location de service</button>
+            <button class="accordion">6 | Op Heberg - Développement d'un site web de location de service</button>
             <div class="panel">
                 <br>
                 <h3>Projet Op Heberg, 2022</h3>
@@ -111,7 +135,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">5) Rent a dev - Développement d'un site web permettant de louer des services informatiques</button>
+            <button class="accordion">5 | Rent a dev - Développement d'un site web permettant de louer des services informatiques</button>
             <div class="panel">
                 <br>
                 <h3>Projet Rent a dev, 2022</h3>
@@ -127,7 +151,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">4) Installation de serveur - Installation d'un serveur Debian</button>
+            <button class="accordion">4 | Installation de serveur - Installation d'un serveur Debian</button>
             <div class="panel">
                 <br>
                 <h3>Projet Installation de serveur, 2022</h3>
@@ -139,7 +163,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">3) Open Food Facts - Tri d'une base de données</button>
+            <button class="accordion">3 | Open Food Facts - Tri d'une base de données</button>
             <div class="panel">
                 <br>
                 <h3>Projet Open Food Facts, 2022</h3>
@@ -149,7 +173,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">2) Classification automatique - Développement d'une IA</button>
+            <button class="accordion">2 | Classification automatique - Développement d'une IA</button>
             <div class="panel">
                 <br>
                 <h3>Projet Classification automatique, 2021</h3>
@@ -161,7 +185,7 @@
             </div>
         </div>
         <div class="projects-content">
-            <button class="accordion">1) Hardis Group - Développement d'un site internet pour une ESN</button>
+            <button class="accordion">1 | Hardis Group - Développement d'un site internet pour une ESN</button>
             <div class="panel">
                 <br>
                 <h3>Projet Hardis Group, 2021</h3>
