--- a/index.html
+++ b/index.html
@@ -86,10 +86,6 @@
                         <span class="settings-translator"></span>
                     </div>
                     <div class="header-title">translator</div>
-                    <div class="translate-icons">
-                        <img class="from" src="">
-                        <img class="translate-arrow" src="chrome-extension://ibppednjgooiepmkgdcoppnmbhmieefh/images/right-arrow.png">
-                    </div>
                 </div>
                 <div class="translated-text">
                     <div id="translator-words" class="words"></div>
@@ -114,7 +110,8 @@
                     </div>
                 </div>
             </div><span class="translate-button-mtz hidden_translate green"></span>
-            <canvas id="canvas3d" data-engine="three.js r149" width="476" height="790" style="width: 100%; height: 100%;"></canvas>
+            <canvas id="canvas3d" data-engine="three.js r149" width="698" height="789" style="width: 100%; height: 100%;"></canvas>
+            </body>
         </div>
         <div class="hero-content">
             <h1>Bonjour, je suis Ethan</h1>
