--- a/a-propos-de-moi.html
+++ b/a-propos-de-moi.html
@@ -45,7 +45,7 @@
                 <br>
                 <h3>Expériences</h3>
                 <br>
-                <p>J'ai l'occasion de réaliser un stage de 10 semaine au sein de l'équipe SIGMA du Laboratoire Informatique de Grenoble afin d'étendre un de leur outil à l'aide des langages HTML et CSS.</p>
+                <p>J'ai l'occasion de réaliser un stage de 10 semaine au sein de l'équipe SIGMA du Laboratoire Informatique de Grenoble afin d'étendre un de leur outil à l'aide des langages HTML, JS et CSS.</p>
                 <br>
                 <p>Nombreux de mes projets sont également disponibles dans la section <a class="links" href="projets.html">projets</a>.</p>
                 <br>
