--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <span class="copy green"></span>
                         <span class="settings-translator"></span>
                     </div>
-                    <div class="header-title">translator</div>
+                    <div class="header-title"></div>
                 </div>
                 <div class="translated-text">
                     <div id="translator-words" class="words"></div>
@@ -97,7 +97,6 @@
                             <div class="trans_controls__inner-circle"></div>
                         </span>
                         <span class="trans_controls__description">
-                        Double-click
                         </span>
                     </div>
                     <div class="trans_controls__control-wrapper selection">
@@ -105,7 +104,6 @@
                             <div class="trans_controls__inner-circle"></div>
                         </span>
                         <span class="trans_controls__description">
-                        Select to translate
                         </span>
                     </div>
                 </div>
