--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
     <div class="hero-container">
         <div class="hero-content">
-            <body data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed=""><audio class="audio-for-speech" src=""></audio><div class="translate-tooltip-mtz green sm-root translate hidden_translate">
+            <body data-new-gr-c-s-check-loaded="14.1098.0" data-gr-ext-installed=""><audio class="audio-for-speech" src=""></audio><div class="translate-tooltip-mtz green sm-root translate hidden_translate" style="opacity: 0;">
                 <div class="header-wrapper">
                     <div class="header-controls">
                         <span class="sound-translate"></span>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div><span class="translate-button-mtz hidden_translate green"></span>
-            <canvas id="canvas3d" data-engine="three.js r149" width="698" height="789" style="width: 100%; height: 100%;"></canvas>
+            <canvas id="canvas3d" data-engine="three.js r149" width="500" height="500" style="width: 100%; height: 100%;"></canvas>
             </body>
         </div>
         <div class="hero-content">
